Updated estimation, schemas, and incomplete fuzzy suggestion
- Estimation calculation and schemas can works on supply `chains`
    which contains multiple routes.
- Fuzzy address suggestion (currently on "/fuzzy") still needs
    some bugfixing.
