# openapi.yaml
@@ -64,10 +64,7 @@ paths:
                             description: >-
                               The country query that the city should be in.
                               (Optional)
-                            examples:
-                              - null
-                              - United
-                              - United States
+                            example: United States
                         required:
                           - city
                         description: The address of the starting point of this `stage`.
@@ -87,10 +84,7 @@ paths:
                             description: >-
                               The country query that the city should be in.
                               (Optional)
-                            examples:
-                              - null
-                              - United
-                              - United States
+                            example: United States
                         required:
                           - city
                         description: The address of the destination of this `stage`.
@@ -108,7 +102,7 @@ paths:
                 example:
                   transport_form: truck
                   distance_km: 100
-              description: List of objects that each represents a `stage` of the route.
+              description: List of objects that each represents a `stage` of the `route`.
               example:
                 - transport_form: truck
                   distance_km: 100
@@ -134,47 +128,72 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    example: 200
-                  total_kg:
+                  chain_kg:
                     type: number
                     description: >-
-                      The estimated emission for the whole route in kilograms,
-                      i.e. the sum of each `stage`.
-                  stages:
+                      The estimated emission for the whole `chain` in kilograms,
+                      i.e. the sum of each `route` (before rounding).
+                    example: 217
+                  routes:
                     type: array
                     items:
                       type: object
                       properties:
-                        kg:
+                        route_kg:
                           type: number
-                          description: The estimated emissions for this `stage`.
-                        transport_form:
-                          type: string
-                          enum:
-                            - truck
-                            - etruck
-                            - train
-                            - aircraft
-                            - cargoship
-                          description: The vehicle type that is used in this `stage`.
+                          description: The estimated emission for the `route` in kilograms.
+                        stages:
+                          type: array
+                          items:
+                            type: object
+                            properties:
+                              stage_kg:
+                                type: number
+                                description: The estimated emissions for this `stage`.
+                              transport_form:
+                                type: string
+                                enum:
+                                  - truck
+                                  - etruck
+                                  - train
+                                  - aircraft
+                                  - cargoship
+                                description: The vehicle type that is used in this `stage`.
+                            required:
+                              - stage_kg
+                              - transport_form
                       required:
-                        - kg
-                        - transport_form
+                        - route_kg
+                        - stages
                 required:
-                  - status
-                  - total_kg
-                  - stages
-                description: The estimated emission for each `stage` as well as the total.
+                  - chain_kg
+                  - routes
+                description: >-
+                  The estimations for this chain as well as the total. All the
+                  estimations are rounded to nearest integer, though, to not
+                  lose too much precision, the sums have been calculated before
+                  rounding.
                 example:
-                  status: 200
-                  total_kg: 300
-                  stages:
-                    - kg: 100
-                      transport_form: truck
-                    - kg: 200
-                      transport_form: etruck
+                  chain_kg: 7057
+                  routes:
+                    - route_kg: 6713
+                      stages:
+                        - stage_kg: 105
+                          transport_form: truck
+                        - stage_kg: 4713
+                          transport_form: truck
+                        - stage_kg: 70
+                          transport_form: etruck
+                        - stage_kg: 325
+                          transport_form: train
+                        - stage_kg: 1500
+                          transport_form: aircraft
+                    - route_kg: 344
+                      stages:
+                        - stage_kg: 134
+                          transport_form: etruck
+                        - stage_kg: 210
+                          transport_form: train
         '400':
           description: Returns an error
           content:
@@ -182,18 +201,13 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    example: 500
                   error:
                     type: string
                     example: Error fetching data
                 required:
-                  - status
                   - error
                 description: An error response.
                 example:
-                  status: 400
                   error: No results found
   /api/suggest:
     post:
@@ -211,10 +225,7 @@ paths:
                 country:
                   type: string
                   description: The country query that the city should be in. (Optional)
-                  examples:
-                    - null
-                    - United
-                    - United States
+                  example: United States
               required:
                 - city
               description: An address containing a city and optionally a country.
@@ -250,16 +261,71 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    example: 500
                   error:
                     type: string
                     example: Error fetching data
                 required:
-                  - status
                   - error
                 description: An error response.
                 example:
-                  status: 400
+                  error: No results found
+  /api/fuzzy:
+    post:
+      description: 'TODO: Add description'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                city:
+                  type: string
+                  description: The city query.
+                  example: New York
+                country:
+                  type: string
+                  description: The country query that the city should be in. (Optional)
+                  example: United States
+              required:
+                - city
+              description: An address containing a city and optionally a country.
+              examples:
+                - city: New
+                - city: Copen
+                  country: Denmark
+      responses:
+        '200':
+          application/json:
+            schema:
+              _def:
+                type:
+                  _def:
+                    unknownKeys: strip
+                    catchall:
+                      _def:
+                        typeName: ZodNever
+                    typeName: ZodObject
+                  _cached: null
+                minLength: null
+                maxLength: null
+                exactLength: null
+                typeName: ZodArray
+                openapi:
+                  metadata:
+                    description: A list of city suggestions and their countries
+          description: 'TODO: Add description'
+        '400':
+          description: Returns and error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Error fetching data
+                required:
+                  - error
+                description: An error response.
+                example:
                   error: No results found
